- Save image to gallery

--- a/app/src/main/res/layout/activity_full_screen_view.xml
+++ b/app/src/main/res/layout/activity_full_screen_view.xml
@@ -26,5 +26,15 @@
         android:textColor="#ffffff"
         android:text="Close" />
 
+    <ImageView
+        android:id="@+id/downloadIv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="42dp"
+        android:layout_toStartOf="@+id/closeIv"
+        app:srcCompat="@drawable/ic_download" />
+
 
 </RelativeLayout>
