--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,24 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+            <Button
+                android:id="@+id/prevBt"
+                style="@style/wh_bg_bt"
+                android:layout_marginEnd="10dp"
+                android:onClick="getBefore"
+                android:text="Previous" />
+
+            <Button
+                android:id="@+id/button2"
+                style="@style/wh_bg_bt"
+                android:onClick="getAfter"
+                android:text="Next" />
+        </LinearLayout>
     </LinearLayout>
     <ProgressBar
         android:id="@+id/progressBar"
